[package]
name = "ucc"
description = "Compu microcode Compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version = "7.1.3", features = ["alloc"]}

[package.metadata.deb]
extended-description = "Compu microcode Compiler"
maintainer = "Paul Maruhn <paulmaruhn@posteo.de>"
copyright = "Paul Maruhn <paulmaruhn@posteo.de>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ucc", "usr/bin/", "755"],
]
