[package]
name = "ucc"
description = "Compu microcode Compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
log = "0.4.20"
nom = {version = "7.1.3", features = ["alloc"]}
petgraph = "0.6.4"
prettytable-rs = "0.10.0"
# pretty_env_logger = "0.5.0"
# simple_logger = "4.3.3"
simplelog = "0.12.1"

[package.metadata.deb]
extended-description = "Compu microcode Compiler"
maintainer = "Paul Maruhn <paulmaruhn@posteo.de>"
copyright = "Paul Maruhn <paulmaruhn@posteo.de>"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/ucc", "usr/bin/", "755"],
]
